manifests/oidc_keycloak/oidc/oidc-auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-auth-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-auth-server
  template:
    metadata:
      labels:
        app: oidc-auth-server
    spec:
      containers:
        - name: bun
          image: oven/bun:1.2
          command: ["bun", "/app/server.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-code
              mountPath: /app
              readOnly: true
          
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
          
      volumes:
        - name: app-code
          configMap:
            name: oidc-auth-code
---
apiVersion: v1
kind: Service
metadata:
  name: oidc-auth-service
  namespace: default
spec:
  selector:
    app: oidc-auth-server
  ports:
    - port: 80
      targetPort: 3000
