manifests/oidc_keycloak/oidc/oidc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-demo-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: https-oidc
  hostnames:
    - oidclab.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/oidc
      backendRefs:
        - name: oidc-auth-service
          port: 80
    - matches:
        - path:
            type: Exact
            value: /
        - path:
            type: Exact
            value: /styles.css
        - path:
            type: Exact
            value: /app.js
        - path:
            type: Exact
            value: /favicon.ico
      backendRefs:
        - name: oidc-ui-service
          port: 80
